feat(qr): v3 7차 롱폴링 반려수정 (P0-1/P0-2/P1-1b/P1-2/P2-1/P2-2)
P0-1: waiters.remove(tokenId) → 2-arg remove(tokenId, entry) 로 교체
  — 구 WaiterEntry onCompletion 이 신규 waiter 를 지우는 경쟁조건 제거

P0-2: qr.intent-wait.enabled 피처 게이트 신설
  — IntentWaitRegistry / QrFlowIntentReadyListener / intentWaitScheduler 빈에
    @ConditionalOnProperty 적용; QrController 는 ObjectProvider 로 선택적 주입
  — application.yml + 양쪽 docker-compose 에 QR_INTENT_WAIT_ENABLED 환경변수 추가
  — ApplicationReadyEvent 로 기동 시 활성화 상태 로그 출력

P1-1(b): Redis 저장값 "uuid:customerId" 문자열 → IntentArrivalCacheValue JSON 으로 전환
  — poll/즉시-해소 경로의 DB 왕복 2→0 제거 (storeName 도 캐시에 포함)
  — QrFlowRedisStore: saveIntentArrival/getIntentArrivalDirect/mgetIntentArrival 추가
  — IntentWaitRegistry: resolveFromDb 삭제 → resolveFromCache 로 대체

P1-2: approve 성공 시 롱폴링 Redis 키 정리
  — qrflow:i2t:{intentPublicId} 역참조 키 저장 (initiate AFTER_COMMIT 리스너)
  — approve 경로(legacy/split) 양쪽에 cleanupQrFlowKeys() 추가

P2-1: intent_wait_seconds Timer(publishPercentileHistogram) + path 태그 신설
  — push/poll/immediate 경로별 p95 계측 가능

P2-2: QrFlowIntentReadyListener JavaDoc 에서 "~2 ms 이하" 미측정 주장 제거

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>